--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -24,10 +24,19 @@
   @apply fill-dark !important;
 }
 
+.dark-container .BrainhubCarousel__dots .BrainhubCarousel__dot:before {
+  background-color: #fff;
+  transition: all 0.25s linear;
+}
+
 .light-container .social-icon g {
   transition: all 0.25s linear;
   filter: invert(1);
   fill: #000;
+}
+
+.light-container .app-icon-border {
+  border: 1px solid #ebebeb;
 }
 
 .dark-container .social-icon g {
